<resources>
    <string name="app_name">村务宝典(复刻版)</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="s_frag_register_nickname">用户昵称</string>
    <string name="s_frag_register_phone_num">手机号码</string>
    <string name="s_frag_register_password_check">确认密码</string>
    <string name="s_frag_register_protocol">同意《村务宝典协议》</string>
    <string name="s_frag_register_submit">完成注册</string>

    <string name="s_frag_login_register_password">密码</string>

    <string name="s_frag_login_login">登录</string>
    <string name="s_frag_login_nickname_or_phone_num">昵称/手机号码</string>

    <string name="s_activity_main_login">登录</string>
    <string name="s_activity_main_login_success">登录成功</string>
    <string name="s_activity_main_login_failure">登录失败</string>
    <string name="s_activity_main_register">注册</string>
    <string name="s_activity_main_register_input_nickname">注册失败，未输入用户昵称！</string>
    <string name="s_activity_main_register_input_phone_num">注册失败，未输入手机号码！</string>
    <string name="s_activity_main_register_input_password">注册失败，未输入密码！</string>
    <string name="s_activity_main_register_input_confirm_password">注册失败，未输入确认密码！</string>
    <string name="s_activity_main_register_input_code">注册失败，未输入验证码！</string>
    <string name="s_activity_main_register_input_password_wrong">注册失败，密码不一致！</string>
    <string name="s_activity_main_register_input_protocol">注册失败，未同意协议！</string>
    <string name="s_activity_main_register_input_code_wrong">验证码错误，请重新输入！</string>
    <string name="s_activity_main_register_success">注册成功</string>
    <string name="s_activity_main_register_failure">注册失败</string>
    <string name="TV_1">应急广播一号</string>
    <string name="TV_2">应急广播二号</string>
    <string name="TV_3">应急广播三号</string>
    <string name="TV_4">应急广播四号</string>
    <string name="TV_5">应急广播五号</string>
    <string name="TV_6">应急广播六号</string>
    <string name="TV_7">应急广播七号</string>


    <string name="s_url_login">http://10.0.2.2:8080/LoginTest/LogLet</string>
    <string name="s_url_register">http://10.0.2.2:8080/LoginTest/RegLet</string>
</resources>
